<resources>
    <string name="app_name">DebtsTracker</string>
    <string name="app_name_spaced">Debts Tracker</string>
    <string name="menu_b_create">New record</string>
    <string name="menu_b_history">Show all records</string>
    <string name="create_tv_sum">Sum</string>
    <string name="create_tv_client">Client</string>
    <string name="create_tv_enable_limit">Expiration date</string>
    <string name="create_b_select_date">Select date</string>
    <string name="create_tv_exp_date_ph">Date not selected</string>
    <string name="create_et_sum_hint">0.00</string>
    <string name="create_tv_description">Description</string>
    <string name="create_et_desc_hint">Type something…</string>
    <string name="create_b_done">Create</string>
    <string name="cd_add_client">Create</string>
    <string name="create_er_client_null">Please select client</string>
    <string name="create_er_date_invalid">Expiration date is invalid</string>
    <string name="create_er_sum_empty">Please specify sum</string>
    <string name="create_er_sum_zero">Sum can\'t be zero</string>
    <string name="create_er_sum_negative">Sum must be positive</string>
    <string name="create_date_format_ph">%d%2.%d%2.%d%4</string>
    <string name="auth_tv_username">Username</string>
    <string name="auth_tv_password">Password</string>
    <string name="auth_tv_to_registration">Don\'t have an account? Register</string>
    <string name="auth_tv_to_registration_link">Register</string>
    <string name="auth_tv_to_login">Already have an account? Login</string>
    <string name="auth_tv_to_login_link">Login</string>
    <string name="auth_tv_password_repeat">Repeat password</string>
    <string name="auth_b_submit_login">Login</string>
    <string name="auth_b_submit_register">Register</string>
    <string name="auth_tv_title_register">Registration</string>
    <string name="auth_tv_title_login">Login</string>
    <string name="auth_er_username_is_empty">Username can\'t be empty</string>
    <string name="auth_er_username_too_short">Username length must be at least %d characters</string>
    <string name="auth_er_username_is_allocated">Username is already taken</string>
    <string name="auth_er_password_is_empty">Password can\'t be empty</string>
    <string name="auth_er_password_too_short">Password length must be at least %n characters</string>
    <string name="auth_er_password_not_match">Passwords doesn\'t match</string>
    <string name="auth_er_invalid_credentials">Invalid credentials</string>
    <string name="auth_er_unknown">Authentication failed due to unknown error</string>
    <string name="menu_nav_main_home">Home</string>
    <string name="menu_nav_main_friends">Friends list</string>
    <string name="menu_nav_main_settings">Settings</string>
    <string name="display_username_ph">\@%s</string>
    <string name="history_tv_no_entries">No debt entries found</string>
    <string name="item_debt_tv_incoming">To receive</string>
    <string name="item_debt_tv_outgoing">To pay</string>
    <string name="item_debt_tv_desc_label_true">Description</string>
    <string name="item_debt_tv_desc_label_false">No description</string>
    <string name="debt_price_token_ph">%s %s</string>
    <string name="app_date_format">dd.MM.yyyy</string>
    <string name="user_fullname_duplicates_ph">%s (%n)</string>
    <string name="item_friend_list_tv_imaginary">User not confirmed</string>

    <plurals name="home_tv_debts">
        <item quantity="one">%s debt</item>
        <item quantity="other">%s debts</item>
    </plurals>

    <plurals name="home_tv_debtors">
        <item quantity="one">%s debtor</item>
        <item quantity="other">%s debtors</item>
    </plurals>

    <string-array name="create_debt_types">
        <item>RECEIVE MONEY FROM…</item>
        <item>RETURN MONEY TO…</item>
    </string-array>
</resources>