<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/auth_card_width"
        android:layout_height="wrap_content"
        style="@style/App.Card.Large"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/auth_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/App.Text.H1"
                android:text="@string/auth_tv_title_login" />

            <TextView
                android:id="@+id/auth_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m1"
                android:layout_gravity="center"
                style="@style/App.Text.H2"
                android:text="@string/auth_tv_username" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/App.Card"
                android:layout_marginTop="@dimen/m2"
                app:cardBackgroundColor="@color/c3">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/App.Text.EditText.H2"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:hint="@null"
                    app:backgroundTint="#0000"
                    android:importantForAutofill="no" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/auth_tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/App.Text.H2"
                android:layout_marginTop="@dimen/m2"
                android:text="@string/auth_tv_password" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/App.Card"
                android:layout_marginTop="@dimen/m2"
                app:cardBackgroundColor="@color/c3">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    style="@style/App.Text.EditText.H2"
                    android:inputType="textPassword"
                    android:hint="@null"
                    app:backgroundTint="#0000"
                    android:importantForAutofill="no" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/auth_tv_password_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible"
                style="@style/App.Text.H2"
                android:layout_marginTop="@dimen/m2"
                android:text="@string/auth_tv_password_repeat" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/App.Card"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginTop="@dimen/m2"
                app:cardBackgroundColor="@color/c3">

                <EditText
                    android:id="@+id/et_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    style="@style/App.Text.EditText.H2"
                    android:inputType="textPassword"
                    android:hint="@null"
                    app:backgroundTint="#0000"
                    android:importantForAutofill="no" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_switch_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/App.Text.H6"
                android:layout_marginTop="@dimen/m1"
                android:text="@string/auth_tv_to_registration" />

            <Button
                android:id="@+id/b_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/App.Button"
                android:text="@string/auth_b_submit_login" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/m1"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>