<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.create.CreateFragment"
    android:background="@color/app_background"
    android:paddingHorizontal="@dimen/m2"
    android:paddingVertical="@dimen/m1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:contentPadding="@dimen/m1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_sum"
                app:layout_constraintBottom_toBottomOf="@id/et_sum"
                style="@style/App.Text.H5"
                android:text="@string/create_tv_sum" />

            <EditText
                android:id="@+id/et_sum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/spin_client"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_sum"
                android:layout_marginHorizontal="@dimen/m2"
                android:hint="0.00"
                style="@style/App.Text.H5"
                android:backgroundTint="@color/black"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spin_client"
                app:layout_constraintBottom_toBottomOf="@id/spin_client"
                style="@style/App.Text.H5"
                android:text="@string/create_tv_client" />

            <Spinner
                android:id="@+id/spin_client"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/m1"
                tools:listitem="@layout/support_simple_spinner_dropdown_item"
                app:layout_constraintStart_toEndOf="@id/tv_client"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_enable_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cb_limit"
                app:layout_constraintBottom_toBottomOf="@id/cb_limit"
                style="@style/App.Text.H5"
                android:text="@string/create_tv_enable_limit" />

            <CheckBox
                android:id="@+id/cb_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:checked="true"
                android:button="@drawable/ic_launcher_foreground"
                app:layout_constraintTop_toBottomOf="@id/et_sum"
                app:layout_constraintStart_toEndOf="@id/tv_enable_limit" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/cb_limit"
                app:layout_constraintTop_toTopOf="@id/cb_limit"
                app:layout_constraintBottom_toBottomOf="@id/cb_limit"
                android:visibility="gone"
                tools:visibility="visible"
                style="@style/App.Text.H5"
                tools:text="22.02.2023" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>